# cfd-post-processing

./: .gitignore  00_FS3_FSA_etal.json  0406_Finchley_FS1_Plot80_FSA.fds_1776875134353_FDS_etal.json  0406_Finchley_FS2_Plot84_FSA.fds_1776932523833_FDS_etal.json  BUILD.md  FS1_1A_MOE_3m3s_etal.json  FS1_FSA_-_Union_Wharf2_etal.json  FS1_FSA_etal.json  FS1_MOE_etal.json  FS1_NC_MoE_etal.json  FS2_FSA_etal.json  FS2_SC_MoE_etal.json  MIGRATION.md  PR2_PLAN.md  PR3_PLAN.md  README.md  RELEASE.md  S1_FSA_etal.json  Template CFD Report.docx  index.html  package-lock.json  package.json  pyinstaller-server.spec  pytest.ini  references.csv  requirements.txt  template_9_image.docx  template_one_image.docx  tsconfig.json  vite.config.ts
CFD Word Template/: Template CFD Report - Copy.docx  Template CFD Report.docx  jinja_dump.docx
pipeline/: Pressure_chart.py  auto_report.py  click_grid_points.py  config.py  constants.py  fds_output_utils.py  helper_functions.py  hrr_graph.py  main.py  pdf_generator.py  pdfgeneration.py  rename_files.py  render_doc.py  report_draw.py  report_gen_helper_functions.py  reportgenerator.py  run_finchley.py  run_only_charts.py  run_pdf_generator.py  scen_object_helper_functions.py  scenarios_object.py  server.py  slice_files.py  slice_gui.py  slice_to_report.py  validate.py  variable_text.py
scripts/: build-sidecar.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
templates/: references.csv
tests/: conftest.py  test_build_context.py  (+18 more)
(+20 files in other folders)
