[package]
name = "cfd-post-processing"
version = "0.3.0-rc.6"
description = "Tauri shell for the CFD Post-Processing desktop app."
authors = ["Fire Dynamics Group"]
license = ""
edition = "2021"
rust-version = "1.70"
default-run = "cfd-post-processing"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }

[target.'cfg(windows)'.dependencies]
win32job = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
